# lontar

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN_DECISIONS.md  LICENSE-MIT  README.md  TODO.md  rust-toolchain.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  coverage.yml
.windsurf/workflows/: continue.md  scp.md
crates/lontar-aksara/: Cargo.toml
crates/lontar-aksara/examples/: balinese_shaping.rs
crates/lontar-aksara/src/: bidi.rs  lang.rs  lib.rs  linebreak.rs  script.rs  shaping.rs
crates/lontar-aksara/src/font/: manager.rs  mod.rs  subset.rs  system.rs
crates/lontar-cli/: Cargo.toml
crates/lontar-cli/src/: main.rs
crates/lontar-core/: Cargo.toml
crates/lontar-core/benches/: core_bench.rs
crates/lontar-core/src/: ast.rs  bibliography.rs  builder.rs  error.rs  lib.rs  resource.rs  style.rs  writer.rs
crates/lontar-core/tests/: core_tests.rs
crates/lontar-diagram/: Cargo.toml
crates/lontar-diagram/src/: layout.rs  lib.rs  model.rs
crates/lontar-diagram/src/render/: ascii.rs  drawingml.rs  mermaid.rs  mod.rs  svg.rs
crates/lontar-docx/: Cargo.toml
crates/lontar-html/: Cargo.toml
crates/lontar-md/: Cargo.toml
crates/lontar-md/src/: lib.rs
crates/lontar-pdf/: Cargo.toml
crates/lontar-pptx/: Cargo.toml
crates/lontar-template/: Cargo.toml
crates/lontar-txt/: Cargo.toml
crates/lontar-xlsx/: Cargo.toml
crates/lontar-xlsx/src/: lib.rs
docs/: LATEX_SPEC.md
docs/aksara/: docx-font-handling.md  font-subsetting.md  latex-font-handling.md  pdf-font-handling.md  rustybuzz-evaluation.md  unicode-bidi-evaluation.md  unicode-linebreak-evaluation.md  unicode-script-evaluation.md
docs/bibliography/: apa-7th-style.md  biblatex-entry-types.md  bibtex-parsing-evaluation.md  bibtex-parsing.md  citation-styles.md  csl-json-evaluation.md  csl-json-format.md  csl-processor-evaluation.md  journal-submission-survey.md  journal-submission-systems.md  vancouver-style.md
docs/latex_examples/: 01_minimal.tex  02_headings.tex  03_styled_text.tex  04_table.tex  05_image.tex  06_lists.tex  07_code_block.tex  08_math.tex  09_citations.tex  10_crossrefs.tex  11_hyperlinks.tex  12_tikz.tex  13_blockquote.tex  14_pagebreak.tex  15_toc.tex  16_multiscript.tex  README.md  references.bib
docs/ooxml/: chart-data-embedding.md  complex-script-markup.md  docx-ast-mapping.md  emu-coordinate-system.md  font-embedding.md  minimal-docx-structure.md  minimal-pptx-structure.md  namespace-cheatsheet.md  numbering-lists.md  pptx-ast-mapping.md  relationships-and-content-types.md  shared-components.md  styles-inheritance.md
docs/specs/OOXML/: analysis_plan.md
docs/text-shaping/: font-subsetting.md  pdf-font-embedding.md  rustybuzz-evaluation.md  unicode-bidi-evaluation.md  unicode-linebreak-evaluation.md  unicode-script-evaluation.md
lontar/: Cargo.toml  README.md
lontar-cli/: Cargo.toml  README.md
lontar-cli/src/: main.rs
lontar/src/: lib.rs
lontar/src/aksara/: mod.rs  prototype.rs  test_strings.rs
lontar/src/backends/: mod.rs
lontar/src/backends/docx/: mod.rs
lontar/src/backends/html/: mod.rs
lontar/src/backends/md/: mod.rs
lontar/src/backends/pdf/: mod.rs
lontar/src/backends/pptx/: mod.rs
lontar/src/backends/txt/: mod.rs
lontar/src/backends/xlsx/: mod.rs
lontar/src/core/: ast.rs  bibliography.rs  chart.rs  crossref.rs  error.rs  mod.rs  style.rs  tests.rs  types.rs  writer.rs
lontar/src/diagram/: mod.rs
lontar/src/template/: mod.rs
scripts/: generate_pdf_fixtures.sh
tests/fixtures/: VERIFICATION_CHECKLIST.md  generate_missing_docs.py
tests/fixtures/bib/: README.md  sample.bib  sample.json
tests/fixtures/expected_html/docx_sources/: bibliography.html  block_quotes.html  citations.html  cross_refs.html  headers_footers.html  headings.html  hyperlinks.html  images.html  lists.html  minimal.html  page_breaks.html  styled_text.html  table_of_contents.html  tables.html
tests/fixtures/expected_html/pptx_sources/: chart_slide.html  content_bullets.html  image_slide.html  speaker_notes.html  table_slide.html  title_slide.html  two_column.html
tests/fixtures/expected_md/docx_sources/: bibliography.md  block_quotes.md  citations.md  cross_refs.md  headers_footers.md  hyperlinks.md  images.md  lists.md  page_breaks.md  styled_text.md  table_of_contents.md  tables.md
tests/fixtures/expected_md/pptx_sources/: chart_slide.md  content_bullets.md  image_slide.md  speaker_notes.md  table_slide.md  title_slide.md  two_column.md
tests/fixtures/expected_pdf/: README.md
tests/fixtures/expected_tex/docx_sources/: bibliography.tex  block_quotes.tex  citations.tex  cross_refs.tex  headers_footers.tex  headings.tex  hyperlinks.tex  images.tex  lists.tex  minimal.tex  page_breaks.tex  styled_text.tex  table_of_contents.tex  tables.tex
tests/fixtures/expected_tex/pptx_sources/: chart_slide.tex  content_bullets.tex  image_slide.tex  speaker_notes.tex  table_slide.tex  title_slide.tex  two_column.tex
tests/fixtures/expected_txt/docx_sources/: bibliography.txt  block_quotes.txt  citations.txt  cross_refs.txt  headers_footers.txt  headings.txt  images.txt  (+6 more)
tests/fixtures/reference_docs/: bibliography.docx  bibliography.md  block_quotes.docx  charts.pptx  citations.docx  citations.md  code_blocks.docx  content.pptx  cross_refs.docx  cross_refs.md  headers_footers.docx  headings.docx  hyperlinks.docx  image.pptx  images.docx  layout.docx  layouts.pptx  lists.docx  minimal.docx  minimal.pptx  multiscript.docx  multiscript.pptx  notes.pptx  page_breaks.docx  styled.docx  styled.pptx  table.pptx  table_of_contents.docx  tables.docx  two_column.pptx
tests/fixtures/scripts/: FONTS_README.md  README.md  fonts.md  fonts_manifest.txt  generate_multiscript_docs.py  generate_refs.py  reference_template.tex  shaping_expectations.md  shaping_notes.md  strings.txt  test_strings.json
tools/gen_reference/: README.md  extract_xml.py  minimal_docx.py  minimal_pptx.py  requirements.txt  unzip_references.py
(+172 files in other folders)
