[workspace]
members  = ["lontar", "lontar-cli"]
resolver = "2"

[workspace.package]
version      = "0.1.1"
edition      = "2024"
rust-version = "1.88"
authors      = ["Kresna Sucandra"]
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/lontar-rs/lontar"

[workspace.dependencies]
lontar = { path = "lontar", version = "0.1.1" }

zip               = "2"
quick-xml         = { version = "0.37", features = ["serialize"] }
rustybuzz         = "0.20"
unicode-bidi      = "0.3"
unicode-linebreak = "0.1"
unicode-script    = "0.5"
petgraph          = "0.8"
rust_xlsxwriter   = "0.94"
tera              = "1"
clap              = { version = "4", features = ["derive"] }
thiserror         = "2"
chrono            = { version = "0.4", features = ["serde"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
