[package]
name = "lontar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A comprehensive document generation library for Rust"

[dependencies]
lontar-core = { path = "../crates/lontar-core", version = "0.1.0" }

[features]
default = ["md", "txt"]
md = ["dep:lontar-md"]
txt = ["dep:lontar-txt"]
html = ["dep:lontar-html"]
docx = ["dep:lontar-docx"]
pptx = ["dep:lontar-pptx"]
pdf = ["dep:lontar-pdf"]
xlsx = ["dep:lontar-xlsx"]
template = ["dep:lontar-template"]
full = ["md", "txt", "html", "docx", "pptx", "pdf", "xlsx", "template"]

[dependencies.lontar-md]
path = "../crates/lontar-md"
version = "0.1.0"
optional = true

[dependencies.lontar-txt]
path = "../crates/lontar-txt"
version = "0.1.0"
optional = true

[dependencies.lontar-html]
path = "../crates/lontar-html"
version = "0.1.0"
optional = true

[dependencies.lontar-docx]
path = "../crates/lontar-docx"
version = "0.1.0"
optional = true

[dependencies.lontar-pptx]
path = "../crates/lontar-pptx"
version = "0.1.0"
optional = true

[dependencies.lontar-pdf]
path = "../crates/lontar-pdf"
version = "0.1.0"
optional = true

[dependencies.lontar-xlsx]
path = "../crates/lontar-xlsx"
version = "0.1.0"
optional = true

[dependencies.lontar-template]
path = "../crates/lontar-template"
version = "0.1.0"
optional = true

[dependencies.lontar-diagram]
path = "../crates/lontar-diagram"
version = "0.1.0"
optional = true
