[package]
name        = "lontar"
version     = "0.1.0"
edition     = "2024"
description = "Comprehensive document generation library for Rust — write once, render everywhere."
keywords    = ["document", "docx", "pdf", "office", "ooxml"]
categories  = ["text-processing", "encoding"]
authors     = ["Kresna Sucandra"]
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/lontar-rs/lontar"

[features]
default = []
full    = ["docx", "pptx", "pdf", "xlsx", "md", "html", "txt", "diagram", "template"]

aksara = [
    "dep:rustybuzz",
    "dep:unicode-bidi",
    "dep:unicode-linebreak",
    "dep:unicode-script",
]

diagram = ["dep:petgraph"]

docx     = ["aksara", "dep:zip", "dep:quick-xml"]
pptx     = ["aksara", "dep:zip", "dep:quick-xml"]
pdf      = ["aksara"]
xlsx     = ["dep:rust_xlsxwriter"]
md       = []
html     = []
txt      = []
template = ["dep:tera"]

[dependencies]
thiserror  = { workspace = true }
chrono     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

zip               = { workspace = true, optional = true }
quick-xml         = { workspace = true, optional = true }
rustybuzz         = { workspace = true, optional = true }
unicode-bidi      = { workspace = true, optional = true }
unicode-linebreak = { workspace = true, optional = true }
unicode-script    = { workspace = true, optional = true }
petgraph          = { workspace = true, optional = true }
rust_xlsxwriter   = { workspace = true, optional = true }
tera              = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
