[package]
name = "lontar-aksara"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Text shaping, BiDi, line breaking, and font management for Lontar"

[dependencies]
lontar-core = { path = "../lontar-core", version = "0.1.0" }
