[package]
name = "lontar-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for Lontar document generation and conversion"

[dependencies]
lontar-core = { path = "../lontar-core", version = "0.1.0" }
