[package]
name = "lontar-docx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "DOCX document format support for Lontar"

[dependencies]
lontar-core = { path = "../lontar-core", version = "0.1.0" }
thiserror.workspace = true
zip.workspace = true
quick-xml.workspace = true
