[package]
name = "lontar-html"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTML document format support for Lontar"

[dependencies]
lontar-core = { path = "../lontar-core", version = "0.1.0" }
thiserror.workspace = true
