[package]
name = "lontar-template"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Template engine support for Lontar"

[dependencies]
lontar-core = { path = "../lontar-core" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
