[package]
name = "lontar-txt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Plain text document format support for Lontar"

[dependencies]
lontar-core = { path = "../lontar-core" }
thiserror.workspace = true
